fix: scrollbar color changed

--- a/src/pages/Products/components/Products/css/Products.css
+++ b/src/pages/Products/components/Products/css/Products.css
@@ -112,20 +112,20 @@
 
 #style-1::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	/* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
 	border-radius: 10px;
-	background-color: #F5F5F5;
+	background-color:#FFFEE3;
 }
 
 #style-1::-webkit-scrollbar
 {
 	width: 12px;
-	background-color: #F5F5F5;
+	background-color:#FFFEE3;
 }
 
 #style-1::-webkit-scrollbar-thumb
 {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #555;
+	/* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3); */
+	background-color: rgb(77, 58, 64);
 }
